assets/css/style.css
body {
    background: black;
    font-size: 20px;
    font-family: "Futura", sans-serif;
}

#titlebar {
	background-color: blue;
}

#titlebar h1 {
	color: yellow;
}

img {
	margin-bottom: 20px;
	margin-right: 50px;
	height: 300px;
}

#in, #out {
	text-align: right;
}

